--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   <div class="third-content">
     <section>
       <figure>
-        <img src="../news-homepage-main/assets/images/image-retro-pcs.jpg" width="100px" height="200px" alt="retro-pcs">
+        <img src="/news-homepage/assets/images/image-retro-pcs.jpg" width="100px" height="200px" alt="retro-pcs">
       </figure>
       <div>
         <h2>01</h2>
@@ -93,7 +93,7 @@
   
     <section>
       <figure>
-        <img src="../news-homepage-main/assets/images/image-top-laptops.jpg" width="100px" height="200px" alt="">
+        <img src="../news-homepage/assets/images/image-top-laptops.jpg" width="100px" height="200px" alt="">
       </figure>
       <div>
         <h2>02</h2>
@@ -104,7 +104,7 @@
   
     <section>
       <figure>
-        <img src="../news-homepage-main/assets/images/image-gaming-growth.jpg" width="100px" height="200px" alt="">
+        <img src="../news-homepage/assets/images/image-gaming-growth.jpg" width="100px" height="200px" alt="">
       </figure>
       <div>
         <h2>03</h2>
