--- a/index.html
+++ b/index.html
@@ -34,20 +34,20 @@
     </label>
   </header>
 
-  <div class="content">
-    <div class="first-content">
-      <div  class="content-item1">
+  <div role="banner" class="content">
+    <div role="complementary" class="first-content">
+      <div role="contentinfo" class="content-item1">
         <div>
         </div>
       </div>
-      <div class="content-item2">
+      <div role="contentinfo" class="content-item2">
         <h1>
           The Bright Future of Web 3.0?
         </h1>
       </div>
   
-      <div class="content-item3">
-        <span class="span-content">
+      <div role="complementary" class="content-item3">
+        <span role="contentinfo" class="span-content">
           We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
           But is it really fulfilling its promise?
         </span>
@@ -80,7 +80,7 @@
   </div>
 
   <div class="third-content">
-    <section>
+    <section role="article">
       <figure>
         <img src="/news-homepage/assets/images/image-retro-pcs.jpg" width="100" height="200" alt="retro-pcs">
       </figure>
@@ -91,7 +91,7 @@
       </div>
     </section>
   
-    <section>
+    <section role="article">
       <figure>
         <img src="../news-homepage/assets/images/image-top-laptops.jpg" width="100" height="200" alt="">
       </figure>
@@ -102,7 +102,7 @@
       </div>
     </section>
   
-    <section>
+    <section role="article">
       <figure>
         <img src="../news-homepage/assets/images/image-gaming-growth.jpg" width="100" height="200" alt="">
       </figure>
