--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
   </header>
 
   <div role="banner" class="content">
-    <div role="complementary" class="first-content">
-      <div role="contentinfo" class="content-item1">
+    <div class="first-content">
+      <div  class="content-item1">
         <div>
         </div>
       </div>
-      <div role="contentinfo" class="content-item2">
+      <div class="content-item2">
         <h1>
           The Bright Future of Web 3.0?
         </h1>
       </div>
   
-      <div role="complementary" class="content-item3">
-        <span role="contentinfo" class="span-content">
+      <div class="content-item3">
+        <span class="span-content">
           We dive into the next evolution of the web that claims to put the power of the platforms back into the hands of the people. 
           But is it really fulfilling its promise?
         </span>
@@ -80,7 +80,7 @@
   </div>
 
   <div class="third-content">
-    <section role="article">
+    <section>
       <figure>
         <img src="/news-homepage/assets/images/image-retro-pcs.jpg" width="100" height="200" alt="retro-pcs">
       </figure>
@@ -91,7 +91,7 @@
       </div>
     </section>
   
-    <section role="article">
+    <section>
       <figure>
         <img src="../news-homepage/assets/images/image-top-laptops.jpg" width="100" height="200" alt="">
       </figure>
@@ -102,7 +102,7 @@
       </div>
     </section>
   
-    <section role="article">
+    <section>
       <figure>
         <img src="../news-homepage/assets/images/image-gaming-growth.jpg" width="100" height="200" alt="">
       </figure>
