--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </label>
   </header>
 
-  <div role="banner" class="content">
+  <div class="content">
     <div class="first-content">
       <div  class="content-item1">
         <div>
@@ -79,7 +79,7 @@
     </aside>
   </div>
 
-  <div class="third-content">
+  <div class="third-content" role="article">
     <section>
       <figure>
         <img src="/news-homepage/assets/images/image-retro-pcs.jpg" width="100" height="200" alt="retro-pcs">
